--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                 placeholder=""
                 id="user-mail"
               />
-              <svg class="form-icon" width="18" height="18">
+              <svg class="form-icon" width="15" height="12">
                 <use href="./images/sprite.svg#icon-mail"></use>
               </svg>
             </span>
@@ -580,10 +580,8 @@
                 <use href="./images/sprite.svg#icon-check"></use>
               </svg>
             </span>
-            <span
-              >Соглашаюсь с рассылкой и принимаю
-              <a href="">Условия договоpa</a></span
-            >
+            Соглашаюсь с рассылкой и принимаю
+            <a href="" class="polisy-link">Условия договоpa</a>
           </label>
           <button type="submit" class="btn-form-send">Отправить</button>
         </form>
